# aurora_scanner

./: .gitignore  CMakeLists.txt  README.md  server.cpp  server.h
src/server/: application.cpp  config.cfg  config.cpp  main.cpp  recogniser.cpp  server.cpp  table.cpp  tests.cpp  video_handler.cpp
src/server/headers/: application.h  capptest.h  config.h  recogniser.h  server.h  table.h  tests.h  video_handler.h
src/server/helpers/: images.h
